# coodie

./: .pre-commit-config.yaml  renovate.json
.github/skills/cqlengine-migration/: SKILL.md
.github/skills/cqlengine-migration/references/: checklist.md  gotchas.md  type-mapping.md
.github/skills/cqlengine-migration/workflows/: migrate-cqlengine-app.md
.github/workflows/: benchmark.yml  ci.yml  claude-code-review.yml  docs.yml  issue-manager.yml  labels.yml  plan-continuation.yml  pr-conflict-detect.yml  test-demos.yml  test-integration.yml  test-unit.yml
benchmarks/acsylla/: data.js
benchmarks/scylla/: data.js
demos/: README.md  docker-compose.yml
demos/argus-tracker/: Makefile  README.md  models.py  pyproject.toml  seed.py  smoke_test.py
demos/polymorphic-cms/: Makefile  README.md  main.py  models.py  pyproject.toml  seed.py
demos/polymorphic-cms/templates/: base.html  index.html
demos/polymorphic-cms/templates/partials/: content_detail.html  content_list.html
demos/vector-search/: docker-compose.yml
docs/plans/: UNIMPLEMENTED.md  github-actions-testing-plan.md  plan-phase-continuation-action.md
src/coodie/aio/: document.py
src/coodie/drivers/: __init__.py  python_rs.py
src/coodie/sync/: document.py
tests/: conftest_scylla.py  test_python_rs_driver.py  test_workflow_conventions.py
